Refactor: #130 영화 검색 시 LIKE 조건을 수정하여 인덱스 활용 최적화